--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    margin: 0;
+}
 
 body {
     font-family: Arial, sans-serif;
@@ -5,13 +8,15 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f4f4f4;
+    background-color: #221616;
 }
 
 .game-board {
     display: flex;
     justify-content: space-around;
     width: 600px;
+    border: 1px solid lightcoral;
+    margin-top: 10%;
 }
 
 .tower {
@@ -22,6 +27,13 @@ body {
     flex-direction: column-reverse; /* Stack children from the bottom */
     align-items: center; /* Center children horizontally */
     padding-bottom: 10px; /* Some space at the bottom */
+}
+
+.controls {
+    border: 1px solid blueviolet;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10%;
 }
 
 .disk {
@@ -44,4 +56,11 @@ body {
 #disk3 {
     width: 120px;
     background-color: blue;
+}
+
+#winBanner {
+    width: 563px;
+    border-radius: 8px;
+    box-shadow: 7px 3px 3px grey;
+
 }
