--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+:root {
+    --main: #21354DFD;
+    --sec: #176B87;
+    --turqoise: #64CCC5;
+    --lightTurq: #DAFFFB;
+    --purp: #9400FF;
+    --lime: #A2FF86;
+}
+
 * {
     margin: 0;
 }
@@ -8,7 +17,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #221616;
+    background-color: var(--main)
 }
 
 .game-board {
