--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
     display: flex;
     justify-content: center;
     color: var(--lightTurq);
-    font-size: 40px;
+    font-size: 50px;
 }
 
 .game-board {
@@ -38,6 +38,9 @@ h1 {
     width: 600px;
     /* border: 1px solid lightcoral; */
     margin-top: 10%;
+    box-shadow: 0px 0px 10px var(--lime);
+    border-radius: 10px;
+    padding: 12px;
 }
 
 .tower {
@@ -108,11 +111,7 @@ button {
 
 button:hover {
     cursor: pointer;
-    box-shadow: 2px 1px 1px grey;
+    box-shadow: 2px 1px 1px var(--lime);
     font-size: 19px;
   
-}
-
-.disk:-moz-drag-over {
-    border-radius: 5px;
 }
