--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h1 {
 .tower {
     width: 30px;
     height: 300px;
-    background-color: #ffffffd0;
+    background-color: #e7e7e7d0;
     border-radius: 5px;
     border: 3px solid var(--purp);
     display: flex;
@@ -70,6 +70,7 @@ h1 {
     cursor: pointer;
     border-radius: 5px;
     border: 2px solid rgb(199, 199, 199);
+    transition: all 0.3s ease;
 }
 
 #disk1 {
@@ -101,7 +102,7 @@ h1 {
 #winBanner {
     width: 563px;
     border-radius: 8px;
-    box-shadow: 7px 3px 3px grey;
+    box-shadow: 1px 2px 10px var(--lime);
     background-color: var(--purp);
     color: whitesmoke;
     font-weight: bold;
@@ -125,4 +126,9 @@ button:hover {
     box-shadow: 2px 1px 1px var(--lime);
     font-size: 19px;
   
+}
+
+.disk:hover {
+    transform: scale(1.05);
+    box-shadow: 1px 2px 10px var(--lime)
 }
